<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange">
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/backGrey"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="22dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_gps"
        android:layout_gravity="bottom"></ImageView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textSize="15sp"
        android:fontFamily="@font/mark_pro_500"
        android:textColor="@color/darkBlue"
        android:paddingLeft="10dp"
        ></TextView>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:layout_gravity="center"
            ></ImageView>
    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_filter"
        android:id="@+id/filterOpt"
        android:layout_gravity="bottom"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"></ImageView>
</RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="18dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selCat"
            style="@style/HomeHeaders"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SmallTextsRight"
            android:layout_alignParentRight="true"
            android:text="@string/view"
            android:layout_alignParentBottom="true"></TextView>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="12dp"
            android:layout_weight="1">
        <ImageButton
            android:id="@+id/phonesBtn"
            android:layout_width="71dp"
            android:layout_height="71dp"
            android:layout_gravity="center"
            android:background="@drawable/categ_button"
            android:src="@drawable/ic_categ_phones"
            app:tint="@color/icon_grey"
            ></ImageButton>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CategTexts"
                android:layout_gravity="center"
                android:text="@string/phonesCat"></TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="12dp"
            android:layout_weight="1">
            <ImageButton
                android:layout_width="71dp"
                android:id="@+id/compBtn"
                android:layout_height="71dp"
                android:layout_gravity="center"
                android:background="@drawable/categ_button"
                android:src="@drawable/ic_categ_computer"></ImageButton>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CategTexts"
                android:layout_gravity="center"
                android:text="@string/compCat"></TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="12dp"
            android:layout_weight="1">
            <ImageButton
                android:layout_width="71dp"
                android:layout_height="71dp"
                android:layout_gravity="center"
                android:background="@drawable/categ_button"
                android:src="@drawable/ic_categ_health"
                android:id="@+id/healthBtn"></ImageButton>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CategTexts"
                android:layout_gravity="center"
                android:text="@string/healthCat"></TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="12dp"
            android:layout_weight="1">
            <ImageButton
                android:layout_width="71dp"
                android:layout_height="71dp"
                android:layout_gravity="center"
                android:background="@drawable/categ_button"
                android:src="@drawable/ic_categ_books"
                android:id="@+id/booksBtn"></ImageButton>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CategTexts"
                android:text="@string/booksCat"
                android:layout_gravity="center"></TextView>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp">
        <SearchView
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="55dp"
            android:queryHint="Search"
            android:textColorHint="@color/backGrey"
            android:editTextColor="@color/darkBlue"
            android:foregroundTint="@color/black"
            android:background="@drawable/searchview"
            android:queryBackground="@font/mark_pro_400"
            android:searchIcon="@drawable/ic_loupe"
            ></SearchView>
        <ImageButton
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:src="@drawable/ic_qrcode"
            android:background="@drawable/categ_button"
            android:backgroundTint="@color/orange"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"></ImageButton>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/hotSales"
            style="@style/HomeHeaders"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SmallTextsRight"
            android:layout_marginLeft="189dp"
            android:text="@string/seeMore"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            ></TextView>
    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recViewHot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/bestSel"
            style="@style/HomeHeaders"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SmallTextsRight"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:text="@string/seeMore"
            ></TextView>
    </RelativeLayout>
</LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/recViewBestSell"
            android:nestedScrollingEnabled="false"
            android:layout_marginBottom="50dp"></androidx.recyclerview.widget.RecyclerView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="72dp"
        app:cardBackgroundColor="@color/darkBlue"
        app:cardCornerRadius="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">
            <Button
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:background="@drawable/categ_button"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="68dp"
                ></Button>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="Explorer"
                android:textSize="19sp"
                android:fontFamily="@font/mark_pro_700"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="7dp">
            </TextView>
            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_bag"
                android:layout_marginLeft="30dp"
                android:foregroundGravity="bottom">
            </ImageView>
            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_heart_empty"
                app:tint="@color/white"
                android:layout_marginLeft="40dp">
            </ImageView>
            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_human"
                android:layout_marginLeft="40dp">
            </ImageView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
  </LinearLayout>
</androidx.core.widget.NestedScrollView>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bottSheet"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
            android:background="@drawable/bottom_sheet">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="44dp"
                android:layout_marginRight="31dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:id="@+id/relFilters">
                <ImageButton
                    android:id="@+id/closeFiltBtn"
                    android:layout_width="37dp"
                    android:layout_height="37dp"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/ic_clear"
                    android:backgroundTint="@color/darkBlue"
                    android:background="@drawable/filt_buttons">
                </ImageButton>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/filtOpt"
                    android:textSize="18sp"
                    android:fontFamily="@font/mark_pro_500"
                    android:textColor="@color/darkBlue"
                    android:paddingRight="15dp"
                    android:layout_marginTop="5dp">
                </TextView>
                <TextView
                    android:layout_width="86dp"
                    android:layout_height="37dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/filt_buttons"
                    android:backgroundTint="@color/orange"
                    android:text="Done"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/mark_pro_500">
                </TextView>
            </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/BottSheetText"
                    android:text="@string/filtBrand"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="10dp"></TextView>
<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">
    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:id="@+id/brandAutoCompl">
    </AutoCompleteTextView>
</com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/BottSheetText"
                    android:text="@string/filtPrice"
                    android:layout_marginBottom="10dp"></TextView>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_marginBottom="15dp">
                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="none"
                        android:layout_weight="1"
                        android:id="@+id/priceAutoCompl">
                    </AutoCompleteTextView>
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/BottSheetText"
                    android:text="@string/filtSize"
                    android:layout_marginBottom="10dp"></TextView>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_marginBottom="15dp">
                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:id="@+id/inchAutoCompl">
                    </AutoCompleteTextView>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </FrameLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
